Safari365 Prod/src/objects/EmailTemplateMapping__mdt.object
<CustomObject>
    <description>This setting is used to map the Email Template with different Stage value of service Line item</description>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Name__c</fullName>
        <label>Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EmailTemplateMapping</label>
    <pluralLabel>EmailTemplateMappings</pluralLabel>
</CustomObject>